--- a/css_advanced/style.css
+++ b/css_advanced/style.css
@@ -31,4 +31,22 @@ body {
 .container_1 {
   text-align: center;
 }
+.central-text {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  padding-bottom: 10px;
+}
+.button {
+  color: white;
+  background-color: var(--secode-bg-color);
+  border-radius: 5px;
+}
+.img-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+}
 
